# clod

./: .clodignore  .gitignore  CAPABILITIES.md  CAPABILITY_SECURITY.md  CHANGELOG.md  CLAUDE.md  CLOD.md  CONTRIBUTING.md  CRITICAL.md  EFFECTS.md  HASKELL.md  HASKELL_PATTERNS.md  HUMAN.md  INSTALLING.md  LICENSE  MAN_PAGES.md  PROJECT_ARCHITECTURE.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  SERIALIZATION.md  SPEC.md  Setup.hs  TEST_SAFETY.md  clod  clod-tests.hs  clod-tests.sh  clod.cabal  clod.hs  clod.sh  guardrails.md  project-instructions.md  update_config.sh
Formula/: clod.rb.template
app/: Main.hs
examples/: EffectsExample.hs
man/: clod.1  clod.1.md  clod.7  clod.7.md  clod.8  clod.8.md
resources/: binary_signatures.dhall  default_clodignore  default_clodignore.dhall  file_types.dhall  text_patterns.dhall
src/Clod/: AdvancedCapability.hs  Capability.hs  Config.hs  Core.hs  Effects.hs  FileSystem.hs  Git.hs  IgnorePatterns.hs  Output.hs  Types.hs
src/Clod/FileSystem/: Checksums.hs  Detection.hs  Operations.hs  Processing.hs  Transformations.hs
src/Clod/Git/: Internal.hs  LibGit.hs
test/: MagicTest.hs  Spec.hs
test/Clod/: AdvancedCapabilitySpec.hs  CapabilitySpec.hs  ConfigSpec.hs  CoreSpec.hs  EffectsSpec.hs  FileSystemSpec.hs  GitSpec.hs  IgnorePatternsSpec.hs  MainSpec.hs  ManPagesSpec.hs  OutputSpec.hs  TestHelpers.hs  TypesSpec.hs
test/Clod/FileSystem/: ChecksumsSpec.hs  DatabaseSpec.hs  DetectionSpec.hs  OperationsSpec.hs  ProcessingSpec.hs  TransformationsSpec.hs
test/Clod/Git/: InternalSpec.hs  LibGitSpec.hs
