name: clod
version: 1.0.0
synopsis: Project file manager for Claude AI integrations
description: 
  Clod (Claude Loader) is a utility for preparing and uploading files to Claude AI's 
  Project Knowledge feature. It tracks file changes, respects .gitignore and .clodignore 
  patterns, and optimizes filenames for Claude's UI.
  .
  Key features:
  .
  * Track modified files since last run
  * Respect .gitignore and .clodignore patterns
  * Handle binary vs. text files automatically
  * Create optimized filenames for Claude's UI
  * Generate a path manifest for mapping optimized names back to original paths
  * Color-coded, user-friendly terminal interface
  .
  Clod is particularly useful for developers working with large codebases who need
  to selectively upload files to Claude AI for code assistance, documentation
  generation, or other AI-assisted tasks.
license: MIT
license-file: LICENSE
author: Fuzz Leonard
maintainer: cyborg@bionicfuzz.com
homepage: https://github.com/fuzz/clod
bug-reports: https://github.com/fuzz/clod/issues
category: Development
build-type: Simple
cabal-version: >=1.10
extra-source-files: 
  README.md,
  CHANGELOG.md,
  CONTRIBUTING.md, 
  RELEASING.md,
  guardrails.md,
  project-instructions.md,
  LICENSE

source-repository head
  type:     git
  location: https://github.com/fuzz/clod

library
  hs-source-dirs: src
  exposed-modules: Clod.Core
                 , Clod.FileSystem
                 , Clod.Git
                 , Clod.IgnorePatterns
                 , Clod.Output
                 , Clod.Types
  build-depends: base >= 4.7 && < 5
               , directory >= 1.3 && < 1.4
               , filepath >= 1.4 && < 1.5
               , process >= 1.6 && < 1.7
               , text >= 1.2 && < 1.3
               , aeson >= 2.0 && < 3.0
               , bytestring >= 0.10 && < 0.12
               , containers >= 0.6 && < 0.7
               , time >= 1.9 && < 1.13
               , temporary >= 1.3 && < 1.4
               , mtl >= 2.2 && < 2.4
               , transformers >= 0.5 && < 0.6
               , unix >= 2.7 && < 2.8
  default-language: Haskell2010
  ghc-options: -Wall

executable clod
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5
               , clod
               , directory >= 1.3 && < 1.4
               , filepath >= 1.4 && < 1.5
               , text >= 1.2 && < 1.3
               , aeson >= 2.0 && < 3.0
               , bytestring >= 0.10 && < 0.12
               , containers >= 0.6 && < 0.7
               , time >= 1.9 && < 1.13
               , process >= 1.6 && < 1.7
               , optparse-applicative >= 0.16 && < 0.18
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite clod-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Clod.IgnorePatternsSpec
               , Clod.FileSystemSpec
               , Clod.GitSpec 
               , Clod.CoreSpec
  build-depends: base >= 4.7 && < 5
               , clod
               , directory >= 1.3 && < 1.4
               , filepath >= 1.4 && < 1.5
               , process >= 1.6 && < 1.7
               , temporary >= 1.3 && < 1.4
               , text >= 1.2 && < 1.3
               , time >= 1.9 && < 1.13
               , hspec >= 2.8 && < 2.12
               , QuickCheck >= 2.14 && < 2.16
               , unix >= 2.7 && < 2.8
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N